boreal/tests/assets/invalid_files/parsing/jump_range_invalid.yar
// [error: invalid range for the jump: 5 > 2]
rule a {
    strings:
        $a = { AB [5-2] 85 }
    condition:
        $a
}
